# coastapp

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Untitled.ipynb  add_to_container_registry.sh  app.py  app2.py  aws.parquet  classes.json  classification.py  crud.py  docker-compose.yaml  environment.yaml  example.ipynb  feature.py  geometry.parquet  labels.py  local.parquet  pyproject.toml  quadtiles-gcts-2000m.parquet  renamer.py  schema.py  transect_schema.json  users.py  utils.py
.virtual_documents/: Untitled.ipynb
notebooks/: Untitled.ipynb  explore_training_data.ipynb
scripts/: renamer.py
scripts/bash/: run_server.sh  setup_run_server.sh
scripts/python/: renamer.py
src/coastapp/: __init__.py  app.py  classification.py  crud.py  encoding.py  enums.py  feature.py  labels.py  libs.py  schema.py  shared_state.py  spatial_engine.py  specification.py  style_config.py  types.py  users.py  utils.py
tests/: test_schema.py
