[project]
name = "coastapp"
version = "0.1.0"
description = "Coastal Typology Application"
authors = [{ name = "Floris Calkoen", email = "your-email@example.com"}]
license = "MIT"
requires-python = ">=3.11"

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"
exclude = []
extend-ignore = [
  "E501",  # Line too long
  "E402",  # Module level import not at top of file
]

[tool.ruff.pydocstyle]
convention = "google"
