[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coastapp"
version = "0.1.0"
description = "Coastal Typology Application"
authors = [{ name = "Floris Calkoen", email = "your-email@example.com"}]
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[tool.hatch.version]
path = "src/coastapp/__init__.py"

[tool.ruff]
line-length = 88
src = ["src"]
target-version = "py311"
exclude = []
extend-ignore = [
  "E501",  # Line too long
  "E402",  # Module level import not at top of file
]

[tool.ruff.pydocstyle]
convention = "google"
